# avalyn-gtk

./: README.md  br.mus.guilherme.Avalyn.json  meson.build
data/: br.mus.guilherme.Avalyn.desktop.in  br.mus.guilherme.Avalyn.gschema.xml  br.mus.guilherme.Avalyn.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: avalyn.gresource.xml  avalyn.in  main.py  meson.build  window.py  window.ui
